Seems silly to have 2 copies of getopt.c that are the same, so make BeOS use the copy in the Unix directory.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59706 13f79535-47bb-0310-9956-ffa450edef68

--- a/misc/beos/Makefile.in
+++ b/misc/beos/Makefile.in
@@ -14,7 +14,7 @@ INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I.
 
 LIB=libmisc.a
 
-OBJS=start.o getopt.o \
+OBJS=start.o misc_common.o \
 
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
