--- a/locks/os2/Makefile.in
+++ b/locks/os2/Makefile.in
@@ -52,7 +52,8 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-locks.o: locks.c $(INCDIR1)/apr_general.h \
- $(INCDIR1)/apr_config.h $(INCDIR1)/apr_errno.h \
- $(INCDIR1)/apr_lib.h $(INCDIR1)/apr_file_io.h locks.h \
- $(INCDIR1)/apr_lock.h $(INCDIR2)/fileio.h
+locks.o: locks.c $(INCDIR1)/apr_general.h $(INCDIR1)/apr.h \
+ $(INCDIR1)/apr_errno.h $(INCDIR1)/apr_lib.h \
+ $(INCDIR1)/apr_file_io.h $(INCDIR1)/apr_time.h \
+ $(INCDIR1)/apr_thread_proc.h locks.h $(INCDIR1)/apr_lock.h \
+ $(INCDIR2)/fileio.h $(INCDIR1)/apr_config.h
