Remove extra \ from Makefile PR:  19 Submitted by:	mja@sgi.com
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59723 13f79535-47bb-0310-9956-ffa450edef68

--- a/shmem/unix/Makefile.in
+++ b/shmem/unix/Makefile.in
@@ -16,7 +16,7 @@ INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I$(INCDIR2) -Imm -I.
 
 LIB=libshmem.a
 
-OBJS=shmem.o \
+OBJS=shmem.o
 
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
