--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -60,34 +60,43 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-apr_cpystrn.o: apr_cpystrn.c ../include/apr_config.h \
- ../include/apr_lib.h ../include/apr_general.h ../include/apr.h \
- ../include/apr_errno.h ../include/apr_file_io.h
-apr_execve.o: apr_execve.c ../include/apr_config.h
-apr_fnmatch.o: apr_fnmatch.c ../include/apr_config.h \
- ../include/apr_fnmatch.h ../include/apr_errno.h ../include/apr.h \
- ../include/apr_lib.h ../include/apr_general.h \
- ../include/apr_file_io.h
-apr_getpass.o: apr_getpass.c ../include/apr_config.h \
- ../include/apr_lib.h ../include/apr_general.h ../include/apr.h \
- ../include/apr_errno.h ../include/apr_file_io.h
-apr_md5.o: apr_md5.c ../include/apr_config.h ../include/apr_md5.h \
- ../include/apr_lib.h ../include/apr_general.h ../include/apr.h \
- ../include/apr_errno.h ../include/apr_file_io.h
-apr_pools.o: apr_pools.c ../include/apr_config.h \
- ../include/apr_general.h ../include/apr.h ../include/apr_errno.h \
- ../include/apr_pools.h ../include/apr_lib.h ../include/apr_file_io.h \
- ../include/apr_lock.h ../misc/unix/misc.h ../include/apr_getopt.h
-apr_signal.o: apr_signal.c ../include/apr_config.h \
- ../include/apr_lib.h ../include/apr_general.h ../include/apr.h \
- ../include/apr_errno.h ../include/apr_file_io.h
-apr_slack.o: apr_slack.c ../include/apr_config.h ../include/apr_lib.h \
- ../include/apr_general.h ../include/apr.h ../include/apr_errno.h \
- ../include/apr_file_io.h
-apr_snprintf.o: apr_snprintf.c ../include/apr_config.h \
- ../include/apr_lib.h ../include/apr_general.h ../include/apr.h \
- ../include/apr_errno.h ../include/apr_file_io.h
-apr_tables.o: apr_tables.c ../include/apr_config.h \
- ../include/apr_general.h ../include/apr.h ../include/apr_errno.h \
- ../include/apr_pools.h ../include/apr_lib.h ../include/apr_file_io.h \
- ../misc/unix/misc.h ../include/apr_getopt.h
+apr_cpystrn.o: apr_cpystrn.c $(INCDIR)/apr_config.h \
+ $(INCDIR)/apr_lib.h $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
+ $(INCDIR)/apr_errno.h $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
+ $(INCDIR)/apr_thread_proc.h
+apr_execve.o: apr_execve.c $(INCDIR)/apr_config.h
+apr_fnmatch.o: apr_fnmatch.c $(INCDIR)/apr_config.h \
+ $(INCDIR)/apr_fnmatch.h $(INCDIR)/apr_errno.h $(INCDIR)/apr.h \
+ $(INCDIR)/apr_lib.h $(INCDIR)/apr_general.h \
+ $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
+ $(INCDIR)/apr_thread_proc.h
+apr_getpass.o: apr_getpass.c $(INCDIR)/apr_config.h \
+ $(INCDIR)/apr_lib.h $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
+ $(INCDIR)/apr_errno.h $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
+ $(INCDIR)/apr_thread_proc.h
+apr_md5.o: apr_md5.c $(INCDIR)/apr_config.h $(INCDIR)/apr_md5.h \
+ $(INCDIR)/apr_lib.h $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
+ $(INCDIR)/apr_errno.h $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
+ $(INCDIR)/apr_thread_proc.h
+apr_pools.o: apr_pools.c $(INCDIR)/apr_config.h \
+ $(INCDIR)/apr_general.h $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/apr_pools.h $(INCDIR)/apr_lib.h $(INCDIR)/apr_file_io.h \
+ $(INCDIR)/apr_time.h $(INCDIR)/apr_thread_proc.h \
+ $(INCDIR)/apr_lock.h ../misc/unix/misc.h $(INCDIR)/apr_getopt.h
+apr_signal.o: apr_signal.c $(INCDIR)/apr_config.h \
+ $(INCDIR)/apr_lib.h $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
+ $(INCDIR)/apr_errno.h $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
+ $(INCDIR)/apr_thread_proc.h
+apr_slack.o: apr_slack.c $(INCDIR)/apr_config.h $(INCDIR)/apr_lib.h \
+ $(INCDIR)/apr_general.h $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
+ $(INCDIR)/apr_thread_proc.h
+apr_snprintf.o: apr_snprintf.c $(INCDIR)/apr_config.h \
+ $(INCDIR)/apr_lib.h $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
+ $(INCDIR)/apr_errno.h $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
+ $(INCDIR)/apr_thread_proc.h
+apr_tables.o: apr_tables.c $(INCDIR)/apr_config.h \
+ $(INCDIR)/apr_general.h $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/apr_pools.h $(INCDIR)/apr_lib.h $(INCDIR)/apr_file_io.h \
+ $(INCDIR)/apr_time.h $(INCDIR)/apr_thread_proc.h \
+ ../misc/unix/misc.h $(INCDIR)/apr_getopt.h
