--- a/misc/unix/Makefile.in
+++ b/misc/unix/Makefile.in
@@ -54,9 +54,12 @@ getopt.o: getopt.c misc.h ../../include/apr_config.h \
  ../../include/apr_general.h ../../include/apr.h \
  ../../include/apr_errno.h ../../include/apr_pools.h \
  ../../include/apr_lib.h ../../include/apr_file_io.h \
+ ../../include/apr_time.h ../../include/apr_thread_proc.h \
  ../../include/apr_getopt.h
 start.o: start.c misc.h ../../include/apr_config.h \
  ../../include/apr_general.h ../../include/apr.h \
  ../../include/apr_errno.h ../../include/apr_pools.h \
  ../../include/apr_lib.h ../../include/apr_file_io.h \
- ../../include/apr_getopt.h
+ ../../include/apr_time.h ../../include/apr_thread_proc.h \
+ ../../include/apr_getopt.h ../../locks/unix/locks.h \
+ ../../include/apr_lock.h
