--- a/network_io/unix/Makefile.in
+++ b/network_io/unix/Makefile.in
@@ -53,25 +53,30 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-poll.o: poll.c networkio.h ../../include/apr_config.h \
- ../../include/apr_network_io.h ../../include/apr_general.h \
- ../../include/apr.h ../../include/apr_errno.h ../../include/apr_lib.h \
- ../../include/apr_file_io.h
-sendrecv.o: sendrecv.c networkio.h ../../include/apr_config.h \
- ../../include/apr_network_io.h ../../include/apr_general.h \
- ../../include/apr.h ../../include/apr_errno.h ../../include/apr_lib.h \
- ../../include/apr_file_io.h
-sockaddr.o: sockaddr.c networkio.h ../../include/apr_config.h \
- ../../include/apr_network_io.h ../../include/apr_general.h \
- ../../include/apr.h ../../include/apr_errno.h ../../include/apr_lib.h \
- ../../include/apr_file_io.h
-sockets.o: sockets.c networkio.h ../../include/apr_config.h \
- ../../include/apr_network_io.h ../../include/apr_general.h \
- ../../include/apr.h ../../include/apr_errno.h ../../include/apr_lib.h \
- ../../include/apr_file_io.h ../../include/apr_portable.h \
- ../../include/apr_thread_proc.h ../../include/apr_lock.h \
- ../../include/apr_time.h
-sockopt.o: sockopt.c networkio.h ../../include/apr_config.h \
- ../../include/apr_network_io.h ../../include/apr_general.h \
- ../../include/apr.h ../../include/apr_errno.h ../../include/apr_lib.h \
- ../../include/apr_file_io.h
+poll.o: poll.c networkio.h $(INCDIR)/apr_config.h \
+ $(INCDIR)/apr_network_io.h $(INCDIR)/apr_general.h \
+ $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
+ $(INCDIR)/apr_lib.h $(INCDIR)/apr_thread_proc.h
+sendrecv.o: sendrecv.c networkio.h $(INCDIR)/apr_config.h \
+ $(INCDIR)/apr_network_io.h $(INCDIR)/apr_general.h \
+ $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
+ $(INCDIR)/apr_lib.h $(INCDIR)/apr_thread_proc.h \
+ ../../file_io/unix/fileio.h
+sockaddr.o: sockaddr.c networkio.h $(INCDIR)/apr_config.h \
+ $(INCDIR)/apr_network_io.h $(INCDIR)/apr_general.h \
+ $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
+ $(INCDIR)/apr_lib.h $(INCDIR)/apr_thread_proc.h
+sockets.o: sockets.c networkio.h $(INCDIR)/apr_config.h \
+ $(INCDIR)/apr_network_io.h $(INCDIR)/apr_general.h \
+ $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
+ $(INCDIR)/apr_lib.h $(INCDIR)/apr_thread_proc.h \
+ $(INCDIR)/apr_portable.h $(INCDIR)/apr_lock.h
+sockopt.o: sockopt.c networkio.h $(INCDIR)/apr_config.h \
+ $(INCDIR)/apr_network_io.h $(INCDIR)/apr_general.h \
+ $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
+ $(INCDIR)/apr_lib.h $(INCDIR)/apr_thread_proc.h
