Fix the problems when sigaction() isn't found and Sigfunc was not being defined. We now do this iff we've found sigaction() and we haven't specifically said not to use it. PR: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59735 13f79535-47bb-0310-9956-ffa450edef68

--- a/include/apr.h.in
+++ b/include/apr.h.in
@@ -103,7 +103,7 @@ typedef  @off_t_value@           ap_off_t;
 /* We are checking for HAVE_SIGACTION, but autoconf is filling this in 
  * for us automatically.
  */
-#if @have_sigaction@
+#if @have_sigaction@ && !defined(NO_USE_SIGACTION)
 typedef void Sigfunc(int);
 Sigfunc *ap_signal(int signo, Sigfunc * func);
 
