Add DSO's to the APR build process.  This also cleans up the DSO stuff, to make it look more like the rest of APR.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59740 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -15,7 +15,7 @@ dnl # and which files are to be configured.
 
 # These added to allow default directories to be used...
 DEFAULT_OSDIR="unix"
-MODULES="file_io network_io threadproc misc locks time mmap shmem"
+MODULES="file_io network_io threadproc misc locks time mmap shmem dso"
 
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(configure.in)
