This "should" get AIX prior to 4.3 using the AIX in the dso directory once we start building that directory again.  This is untested.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59762 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -83,12 +83,18 @@ if test ".$SYS_SW" = ".AIX"; then
     case "$SYS_KV" in
         [12]*)
             AC_DEFINE(USEBCOPY)
+            OSDIR="aix"
             ;;
         3*)
             AC_DEFINE(NEED_RLIM_T)
+            OSDIR="aix"
             ;;
         41*)
             AC_DEFINE(NEED_RLIM_T)
+            OSDIR="aix"
+            ;;
+        42*)
+            OSDIR="aix"
             ;;
     esac
 fi
