--- a/network_io/beos/Makefile.in
+++ b/network_io/beos/Makefile.in
@@ -17,8 +17,8 @@ OBJS=poll.o \
 	sendrecv.o \
 	sockets.o \
 	sockopt.o \
-         inet_aton.o \
-         sockaddr.o
+        inet_aton.o \
+        sockaddr.o
 
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
@@ -53,26 +53,45 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-inet_aton.o: inet_aton.c networkio.h ../../include/apr_general.h \
- ../../include/apr_config.h ../../include/apr_errno.h
-poll.o: poll.c networkio.h ../../include/apr_general.h \
- ../../include/apr_config.h ../../include/apr_errno.h \
- ../../include/apr_network_io.h
-sendrecv.o: sendrecv.c networkio.h ../../include/apr_general.h \
- ../../include/apr_config.h ../../include/apr_errno.h \
- ../../file_io/unix/fileio.h ../../include/apr_file_io.h \
- ../../include/apr_network_io.h
-sockaddr.o: sockaddr.c networkio.h ../../include/apr_general.h \
- ../../include/apr_config.h ../../include/apr_errno.h \
- ../../include/apr_network_io.h ../../include/apr_lib.h \
- ../../include/apr_file_io.h
-sockets.o: sockets.c networkio.h ../../include/apr_general.h \
- ../../include/apr_config.h ../../include/apr_errno.h \
- ../../include/apr_network_io.h ../../include/apr_portable.h \
- ../../include/apr_thread_proc.h ../../include/apr_file_io.h \
- ../../include/apr_win.h ../../include/apr_lock.h \
- ../../include/apr_time.h ../../include/apr_lib.h
-sockopt.o: sockopt.c networkio.h ../../include/apr_general.h \
- ../../include/apr_config.h ../../include/apr_errno.h \
- ../../include/apr_network_io.h ../../include/apr_lib.h \
- ../../include/apr_file_io.h
+inet_aton.o: inet_aton.c networkio.h ../../include/apr_network_io.h \
+ ../../include/apr_general.h ../../include/apr.h \
+ ../../include/apr_errno.h ../../include/apr_file_io.h \
+ ../../include/apr_time.h ../../include/apr_portable.h \
+ ../../include/apr_thread_proc.h ../../include/apr_lock.h \
+ ../../include/apr_lib.h ../../file_io/unix/fileio.h \
+ ../../include/apr_config.h
+poll.o: poll.c networkio.h ../../include/apr_network_io.h \
+ ../../include/apr_general.h ../../include/apr.h \
+ ../../include/apr_errno.h ../../include/apr_file_io.h \
+ ../../include/apr_time.h ../../include/apr_portable.h \
+ ../../include/apr_thread_proc.h ../../include/apr_lock.h \
+ ../../include/apr_lib.h ../../file_io/unix/fileio.h \
+ ../../include/apr_config.h
+sendrecv.o: sendrecv.c networkio.h ../../include/apr_network_io.h \
+ ../../include/apr_general.h ../../include/apr.h \
+ ../../include/apr_errno.h ../../include/apr_file_io.h \
+ ../../include/apr_time.h ../../include/apr_portable.h \
+ ../../include/apr_thread_proc.h ../../include/apr_lock.h \
+ ../../include/apr_lib.h ../../file_io/unix/fileio.h \
+ ../../include/apr_config.h
+sockaddr.o: sockaddr.c networkio.h ../../include/apr_network_io.h \
+ ../../include/apr_general.h ../../include/apr.h \
+ ../../include/apr_errno.h ../../include/apr_file_io.h \
+ ../../include/apr_time.h ../../include/apr_portable.h \
+ ../../include/apr_thread_proc.h ../../include/apr_lock.h \
+ ../../include/apr_lib.h ../../file_io/unix/fileio.h \
+ ../../include/apr_config.h
+sockets.o: sockets.c networkio.h ../../include/apr_network_io.h \
+ ../../include/apr_general.h ../../include/apr.h \
+ ../../include/apr_errno.h ../../include/apr_file_io.h \
+ ../../include/apr_time.h ../../include/apr_portable.h \
+ ../../include/apr_thread_proc.h ../../include/apr_lock.h \
+ ../../include/apr_lib.h ../../file_io/unix/fileio.h \
+ ../../include/apr_config.h
+sockopt.o: sockopt.c networkio.h ../../include/apr_network_io.h \
+ ../../include/apr_general.h ../../include/apr.h \
+ ../../include/apr_errno.h ../../include/apr_file_io.h \
+ ../../include/apr_time.h ../../include/apr_portable.h \
+ ../../include/apr_thread_proc.h ../../include/apr_lock.h \
+ ../../include/apr_lib.h ../../file_io/unix/fileio.h \
+ ../../include/apr_config.h
