--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -24,7 +24,9 @@ TARGETS= testfile@EXEEXT@ \
 	htdigest@EXEEXT@ \
 	testmmap@EXEEXT@ \
 	testshmem@EXEEXT@ \
-	testpipe@EXEEXT@
+	testpipe@EXEEXT@ \
+	testdso@EXEEXT@ \
+	mod_test.so
 
 OBJS= testfile.o \
 	testproc.o \
@@ -35,7 +37,9 @@ OBJS= testfile.o \
         testcontext.o \
 	ab_apr.o \
 	htdigest.o \
-         testmmap.o
+	testmmap.o \
+	testdso.o \
+	mod_test.o
 
 .c.o:
 	$(CC) -c $(CFLAGS) $(INCLUDES) $<
@@ -44,6 +48,12 @@ all: $(TARGETS)
 
 testfile@EXEEXT@: testfile.o
 	$(CC) $(CFLAGS) testfile.o -o testfile@EXEEXT@ $(LDFLAGS) 
+
+testdso@EXEEXT@: testdso.o
+	$(CC) $(CFLAGS) --export-dynamic -fPIC testdso.o -o testdso@EXEEXT@ $(LDFLAGS) 
+
+mod_test.so: mod_test.o
+	$(CC) -shared mod_test.o -o mod_test.so 
 
 testargs@EXEEXT@: testargs.o
 	$(CC) $(CFLAGS) testargs.o -o testargs@EXEEXT@ $(LDFLAGS) 
@@ -103,43 +113,68 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-ab_apr.o: ab_apr.c $(INCDIR)/apr_network_io.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr_config.h \
- $(INCDIR)/apr_errno.h $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h
-abc.o: abc.c $(INCDIR)/apr_file_io.h $(INCDIR)/apr_general.h \
- $(INCDIR)/apr_config.h $(INCDIR)/apr_errno.h
-client.o: client.c $(INCDIR)/apr_network_io.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr_config.h \
- $(INCDIR)/apr_errno.h
-htdigest.o: htdigest.c $(INCDIR)/apr_lib.h $(INCDIR)/apr_general.h \
- $(INCDIR)/apr_config.h $(INCDIR)/apr_errno.h \
- $(INCDIR)/apr_file_io.h $(INCDIR)/apr_md5.h
-htpasswd.o: htpasswd.c $(INCDIR)/apr_signal.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr_config.h \
- $(INCDIR)/apr_errno.h $(INCDIR)/apr_lib.h $(INCDIR)/apr_file_io.h
-logresolve.o: logresolve.c $(INCDIR)/apr_config.h
-rotatelogs.o: rotatelogs.c $(INCDIR)/apr_config.h
-server.o: server.c $(INCDIR)/apr_network_io.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr_config.h \
- $(INCDIR)/apr_errno.h
-suexec.o: suexec.c $(INCDIR)/apr_config.h suexec.h
-testargs.o: testargs.c $(INCDIR)/apr_file_io.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr_config.h \
- $(INCDIR)/apr_errno.h $(INCDIR)/apr_lib.h
-testfile.o: testfile.c $(INCDIR)/apr_file_io.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr_config.h \
- $(INCDIR)/apr_errno.h $(INCDIR)/apr_lib.h
-testproc.o: testproc.c $(INCDIR)/apr_thread_proc.h \
- $(INCDIR)/apr_file_io.h $(INCDIR)/apr_general.h \
- $(INCDIR)/apr_config.h $(INCDIR)/apr_errno.h $(INCDIR)/apr_win.h \
- $(INCDIR)/apr_lib.h 
-testsock.o: testsock.c $(INCDIR)/apr_thread_proc.h \
- $(INCDIR)/apr_file_io.h $(INCDIR)/apr_general.h \
- $(INCDIR)/apr_config.h $(INCDIR)/apr_errno.h $(INCDIR)/apr_win.h \
- $(INCDIR)/apr_lib.h
-testthread.o: testthread.c $(INCDIR)/apr_thread_proc.h \
- $(INCDIR)/apr_file_io.h $(INCDIR)/apr_general.h \
- $(INCDIR)/apr_config.h $(INCDIR)/apr_errno.h $(INCDIR)/apr_win.h \
- $(INCDIR)/apr_lock.h
-testtime.o: testtime.c $(INCDIR)/apr_time.h $(INCDIR)/apr_general.h \
- $(INCDIR)/apr_config.h $(INCDIR)/apr_errno.h
+ab_apr.o: ab_apr.c ../include/apr_network_io.h \
+ ../include/apr_general.h ../include/apr.h ../include/apr_errno.h \
+ ../include/apr_file_io.h ../include/apr_time.h \
+ ../include/apr_getopt.h
+abc.o: abc.c ../include/apr_file_io.h ../include/apr_general.h \
+ ../include/apr.h ../include/apr_errno.h ../include/apr_time.h
+client.o: client.c ../include/apr_network_io.h \
+ ../include/apr_general.h ../include/apr.h ../include/apr_errno.h \
+ ../include/apr_file_io.h ../include/apr_time.h /usr/include/errno.h
+htdigest.o: htdigest.c ../include/apr_lib.h ../include/apr_general.h \
+ ../include/apr.h ../include/apr_errno.h ../include/apr_file_io.h \
+ ../include/apr_time.h ../include/apr_thread_proc.h \
+ ../include/apr_md5.h
+htpasswd.o: htpasswd.c ../include/apr_signal.h \
+ ../include/apr_general.h ../include/apr.h ../include/apr_errno.h \
+ ../include/apr_lib.h ../include/apr_file_io.h ../include/apr_time.h \
+ ../include/apr_thread_proc.h
+logresolve.o: logresolve.c ../include/apr_config.h
+mod_test.o: mod_test.c
+rotatelogs.o: rotatelogs.c ../include/apr_config.h
+server.o: server.c ../include/apr_network_io.h \
+ ../include/apr_general.h ../include/apr.h ../include/apr_errno.h \
+ ../include/apr_file_io.h ../include/apr_time.h
+testargs.o: testargs.c ../include/apr_file_io.h \
+ ../include/apr_general.h ../include/apr.h ../include/apr_errno.h \
+ ../include/apr_time.h ../include/apr_lib.h \
+ ../include/apr_thread_proc.h ../include/apr_getopt.h
+testcontext.o: testcontext.c ../include/apr_file_io.h \
+ ../include/apr_general.h ../include/apr.h ../include/apr_errno.h \
+ ../include/apr_time.h ../include/apr_lib.h \
+ ../include/apr_thread_proc.h
+testdso.o: testdso.c ../include/apr_config.h ../include/apr_general.h \
+ ../include/apr.h ../include/apr_errno.h ../include/apr_pools.h \
+ ../include/apr_lib.h ../include/apr_file_io.h ../include/apr_time.h \
+ ../include/apr_thread_proc.h ../include/apr_dso.h
+testfile.o: testfile.c ../include/apr_file_io.h \
+ ../include/apr_general.h ../include/apr.h ../include/apr_errno.h \
+ ../include/apr_time.h ../include/apr_lib.h \
+ ../include/apr_thread_proc.h
+testmmap.o: testmmap.c ../include/apr_mmap.h ../include/apr_general.h \
+ ../include/apr.h ../include/apr_errno.h ../include/apr_network_io.h \
+ ../include/apr_file_io.h ../include/apr_time.h \
+ ../include/apr_portable.h ../include/apr_thread_proc.h \
+ ../include/apr_lock.h ../include/apr_lib.h
+testpipe.o: testpipe.c ../include/apr_file_io.h \
+ ../include/apr_general.h ../include/apr.h ../include/apr_errno.h \
+ ../include/apr_time.h ../include/apr_lib.h \
+ ../include/apr_thread_proc.h
+testproc.o: testproc.c ../include/apr_thread_proc.h \
+ ../include/apr_file_io.h ../include/apr_general.h ../include/apr.h \
+ ../include/apr_errno.h ../include/apr_time.h ../include/apr_lib.h \
+ /usr/include/errno.h
+testshmem.o: testshmem.c ../include/apr_shmem.h ../include/apr.h \
+ ../include/apr_general.h ../include/apr_errno.h ../include/apr_lock.h \
+ ../include/apr_lib.h ../include/apr_file_io.h ../include/apr_time.h \
+ ../include/apr_thread_proc.h /usr/include/errno.h
+testsock.o: testsock.c ../include/apr_thread_proc.h \
+ ../include/apr_file_io.h ../include/apr_general.h ../include/apr.h \
+ ../include/apr_errno.h ../include/apr_time.h ../include/apr_lib.h
+testthread.o: testthread.c ../include/apr_thread_proc.h \
+ ../include/apr_file_io.h ../include/apr_general.h ../include/apr.h \
+ ../include/apr_errno.h ../include/apr_time.h ../include/apr_lock.h \
+ /usr/include/errno.h
+testtime.o: testtime.c ../include/apr_time.h ../include/apr_general.h \
+ ../include/apr.h ../include/apr_errno.h /usr/include/errno.h
