--- a/dso/unix/Makefile.in
+++ b/dso/unix/Makefile.in
@@ -49,13 +49,9 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-getopt.o: getopt.c misc.h ../../include/apr_config.h \
- ../../include/apr_general.h ../../include/apr.h \
- ../../include/apr_errno.h ../../include/apr_pools.h \
- ../../include/apr_lib.h ../../include/apr_file_io.h \
- ../../include/apr_getopt.h
-start.o: start.c misc.h ../../include/apr_config.h \
- ../../include/apr_general.h ../../include/apr.h \
- ../../include/apr_errno.h ../../include/apr_pools.h \
- ../../include/apr_lib.h ../../include/apr_file_io.h \
- ../../include/apr_getopt.h
+dso.o: dso.c dso.h $(INCDIR)/apr_config.h \
+ $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
+ $(INCDIR)/apr_errno.h $(INCDIR)/apr_pools.h \
+ $(INCDIR)/apr_lib.h $(INCDIR)/apr_file_io.h \
+ $(INCDIR)/apr_time.h $(INCDIR)/apr_thread_proc.h \
+ $(INCDIR)/apr_dso.h
