--- a/misc/unix/Makefile.in
+++ b/misc/unix/Makefile.in
@@ -15,7 +15,7 @@ INCLUDES=-I$(INCDIR1) -I$(INCDIR2) -I.
 
 #LIB=libmisc.a
 
-OBJS=start.o getopt.o 
+OBJS=start.o getopt.o otherchild.o 
 
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
@@ -50,16 +50,21 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-getopt.o: getopt.c misc.h ../../include/apr_config.h \
- ../../include/apr_general.h ../../include/apr.h \
+getopt.o: getopt.c misc.h ../../include/apr.h \
+ ../../include/apr_config.h ../../include/apr_general.h \
  ../../include/apr_errno.h ../../include/apr_pools.h \
  ../../include/apr_lib.h ../../include/apr_file_io.h \
  ../../include/apr_time.h ../../include/apr_thread_proc.h \
  ../../include/apr_getopt.h
-start.o: start.c misc.h ../../include/apr_config.h \
- ../../include/apr_general.h ../../include/apr.h \
+otherchild.o: otherchild.c misc.h ../../include/apr.h \
+ ../../include/apr_config.h ../../include/apr_general.h \
  ../../include/apr_errno.h ../../include/apr_pools.h \
  ../../include/apr_lib.h ../../include/apr_file_io.h \
  ../../include/apr_time.h ../../include/apr_thread_proc.h \
- ../../include/apr_getopt.h ../../locks/unix/locks.h \
- ../../include/apr_lock.h
+ ../../include/apr_getopt.h
+start.o: start.c misc.h ../../include/apr.h ../../include/apr_config.h \
+ ../../include/apr_general.h ../../include/apr_errno.h \
+ ../../include/apr_pools.h ../../include/apr_lib.h \
+ ../../include/apr_file_io.h ../../include/apr_time.h \
+ ../../include/apr_thread_proc.h ../../include/apr_getopt.h \
+ ../../locks/unix/locks.h ../../include/apr_lock.h
