Other child logic finished for Unix.  Docs are forthcoming.  This should for Apache, and those patches are also coming today.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59785 13f79535-47bb-0310-9956-ffa450edef68

--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -26,6 +26,7 @@ TARGETS= testfile@EXEEXT@ \
 	testshmem@EXEEXT@ \
 	testpipe@EXEEXT@ \
 	testdso@EXEEXT@ \
+	testoc@EXEEXT@ \
 	mod_test.so
 
 OBJS= testfile.o \
@@ -39,6 +40,7 @@ OBJS= testfile.o \
 	htdigest.o \
 	testmmap.o \
 	testdso.o \
+	testoc.o \
 	mod_test.o
 
 .c.o:
@@ -51,6 +53,9 @@ testfile@EXEEXT@: testfile.o
 
 testdso@EXEEXT@: testdso.o
 	$(CC) $(CFLAGS) --export-dynamic -fPIC testdso.o -o testdso@EXEEXT@ $(LDFLAGS) 
+
+testoc@EXEEXT@: testoc.o
+	$(CC) $(CFLAGS) testoc.o -o testoc@EXEEXT@ $(LDFLAGS) 
 
 mod_test.so: mod_test.o
 	$(CC) -shared mod_test.o -o mod_test.so 
