--- a/misc/beos/Makefile.in
+++ b/misc/beos/Makefile.in
@@ -14,7 +14,7 @@ INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I.
 
 LIB=libmisc.a
 
-OBJS=start.o misc_common.o \
+OBJS=start.o misc_common.o otherchild.o
 
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
