Add more code sharing arrangements and a few minor updates/tweaks.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59797 13f79535-47bb-0310-9956-ffa450edef68

--- a/threadproc/beos/Makefile.in
+++ b/threadproc/beos/Makefile.in
@@ -18,7 +18,7 @@ OBJS=proc.o \
 	thread.o \
 	threadcancel.o \
 	threadpriv.o \
-	signals.o \
+	threadproc_common.o \
         procsup.o \
         apr_proc_stub
 
