Change the test for ranlib so that we end up with RANLIB=true instead of RANLIB=: in our makefiles when there is no ranlib.  OS/390 make gets upset with RANLIB=:.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59803 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -26,7 +26,7 @@ LIBPREFIX='lib'
 
 dnl # Checks for programs.
 AC_PROG_CC
-AC_PROG_RANLIB
+AC_PROG_RANLIB_NC
 AC_PROG_MAKE_SET
 AC_CHECK_PROG(RM, rm, rm)
 AC_CHECK_PROG(AR, ar, ar)
