--- a/configure.in
+++ b/configure.in
@@ -47,8 +47,7 @@ AC_ARG_WITH(optim,[  --with-optim="FLAGS"      compiler optimisation flags],
 
 AC_ARG_WITH(debug,[  --with-debug              Turn on debugging and compile tim
 e warnings],
-        [if test "$GCC" = "yes"; then CFLAGS="$CFLAGS -g -Wall"; else CFLAGS="$C
-FLAGS -g"; fi])
+        [if test "$GCC" = "yes"; then CFLAGS="$CFLAGS -g -Wall"; else CFLAGS="$CFLAGS -g"; fi])
 
 dnl # this is the place to put specific options for platform/compiler
 dnl # combinations
