Update the error handling in APR.  This includes the docs in APRDesign. Any platform that doesn't use errno as error codes are not working properly and will need to be modified.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59814 13f79535-47bb-0310-9956-ffa450edef68

--- a/misc/unix/Makefile.in
+++ b/misc/unix/Makefile.in
@@ -15,7 +15,7 @@ INCLUDES=-I$(INCDIR1) -I$(INCDIR2) -I.
 
 #LIB=libmisc.a
 
-OBJS=start.o getopt.o otherchild.o 
+OBJS=start.o getopt.o otherchild.o error.o
 
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
