First stage of migrating OS/2 code to new error code mappings, define & use macro for returning OS/2 error codes.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59815 13f79535-47bb-0310-9956-ffa450edef68

--- a/file_io/os2/Makefile.in
+++ b/file_io/os2/Makefile.in
@@ -21,8 +21,7 @@ OBJS=dir.o \
 	open.o \
 	pipe.o \
 	readwrite.o \
-	seek.o \
-	maperrorcode.o
+	seek.o
 
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
