--- a/configure.in
+++ b/configure.in
@@ -71,9 +71,11 @@ case "$OS" in
        OSDIR="beos"
        CFLAGS="$CFLAGS -DBEOS"
        enable_threads="system_threads"
+       config_subdirs="shmem/unix/mm"
        ;;
    *)
        OSDIR="unix"
+       config_subdirs="shmem/unix/mm"
        ;;
 esac
 
@@ -417,7 +419,7 @@ echo -e "\nChecking for Shared Memory Support"
 # run the MM config script regardless of whether we are going to use
 # it or not.  When we have a much better idea of who is using MM, we can
 # run this on a more conditional basis.
-AC_CONFIG_SUBDIRS(shmem/unix/mm)
+AC_CONFIG_SUBDIRS($config_subdirs)
 
 AC_MSG_CHECKING(Checking for Shared memory support)
 AC_ARG_ENABLE(shmem,
