--- a/configure.in
+++ b/configure.in
@@ -43,7 +43,7 @@ AC_CHECK_PROG(SH, sh, sh)
 dnl #----------------------------- Checks for compiler flags
 nl='
 '
-echo $ac_n "${nl}Check for compiler flags.$ac_c"
+echo $ac_n "${nl}Check for compiler flags..."
 AC_ARG_WITH(optim,[  --with-optim="FLAGS"      compiler optimisation flags],
         [OPTIM="$withval"])
 
@@ -290,7 +290,7 @@ AC_SUBST(ssize_t_fmt)
 AC_SUBST(off_t_fmt) 
 
 dnl #----------------------------- Checking for Threads
-echo $ac_n "${nl}Checking for Threads$ac_c"
+echo $ac_n "${nl}Checking for Threads..."
 AC_CACHE_CHECK([for threads], ac_cv_enable_threads,
   [ AC_ARG_ENABLE(threads,
     [  --enable-threads  Enable threading support in APR.],
@@ -337,7 +337,7 @@ AC_CHECK_LIB(c_r, readdir, AC_DEFINE(READDIR_IS_THREAD_SAFE))
 AC_SUBST(threads)
 
 dnl #----------------------------- Checking for MMAP 
-echo $ac_n "${nl}Checking for MMAP$ac_c"
+echo $ac_n "${nl}Checking for MMAP..."
 AC_FUNC_MMAP
 if test "$ac_cv_func_mmap_fixed_mapped" = "yes"; then
     mmap="1"
@@ -347,7 +347,7 @@ fi
 AC_SUBST(mmap)
 
 dnl #----------------------------- Checking for Locking Characteristics 
-echo $ac_n "${nl}Checking for Locking$ac_c"
+echo $ac_n "${nl}Checking for Locking..."
 
 # It's stupid, but not all platforms have union semun, even those that need it.
 AC_MSG_CHECKING(looking for union semun in sys/sem.h)
@@ -416,7 +416,7 @@ AC_SUBST(procpthreadser)
 AC_SUBST(pthreadser)
 
 dnl #----------------------------- Checking for Shared Memory Support 
-echo $ac_n "${nl}Checking for Shared Memory Support$ac_c"
+echo $ac_n "${nl}Checking for Shared Memory Support..."
 
 # run the MM config script regardless of whether we are going to use
 # it or not.  When we have a much better idea of who is using MM, we can
@@ -454,7 +454,7 @@ AC_SUBST(filebased_shm)
 AC_SUBST(keybased_shm)
 
 dnl #----------------------------- Checking for Time Support 
-echo $ac_n "${nl}Checking for Time Support$ac_c"
+echo $ac_n "${nl}Checking for Time Support..."
 AC_CACHE_CHECK([for tm_gmtoff in struct tm], ac_cv_struct_tm_gmtoff,
 [AC_TRY_COMPILE([#include <sys/types.h>
 #include <$ac_cv_struct_tm>], [struct tm tm; tm.tm_gmtoff;],
@@ -465,7 +465,7 @@ if test "$ac_cv_struct_tm_gmtoff" = "yes"; then
 fi
 
 dnl #----------------------------- Checking for Networking Support 
-echo $ac_n "${nl}Checking for Networking support$ac_c"
+echo $ac_n "${nl}Checking for Networking support..."
 AC_MSG_CHECKING(looking for in_addr in netinet/in.h)
 AC_TRY_COMPILE([
 #include <netinet/in.h>
