Many -lsockets require -lnsl
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59825 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -104,6 +104,8 @@ fi
 
 dnl #----------------------------- Checks for Any required Libraries
 AC_CHECK_LIB(dl, dlopen)
+AC_CHECK_LIB(nsl,gethostbyname)
+AC_CHECK_LIB(nsl,gethostname)
 AC_CHECK_LIB(socket,socket)
 AC_CHECK_LIB(crypt,crypt)
 AC_CHECK_LIB(ufc,crypt)
