--- a/shmem/unix/Makefile.in
+++ b/shmem/unix/Makefile.in
@@ -35,7 +35,7 @@ $(OBJS): Makefile
 $(LIB): $(OBJS)
 	$(RM) -f $@
 	cd mm; make; cd ..
-	cp mm/*.o .
+	cp mm/mm_global.o mm/mm_alloc.o mm/mm_core.o mm/mm_lib.o mm/mm_vers.o .
 	$(AR) cr $@ $(OBJS)
 	$(RANLIB) $@
 
