silly cleanup for APR test pgms to avoid compile warnings and to get cvs to ignore some test executables and a directory created by testproc
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59854 13f79535-47bb-0310-9956-ffa450edef68

--- a/test/.cvsignore
+++ b/test/.cvsignore
@@ -2,8 +2,13 @@ Makefile
 testmmap
 htdigest
 ab
+proctest
 testcontext
 testargs
+testdso
+testoc
+testpipe
+testshmem
 testtime
 testthread
 client
