Here's my first stab at getting mod_auth_digest working under 2.0
quick change summary:

 - moved the random byte generation into APR
   This patch adds ap_generate_random_bytes()
 - now uses ap_time_t
 - compiles and runs on linux
 - tested with amaya

still to do:

 - test win32 (This will have to be someone with a windows box :-)
   I think I did everything correctly.  APR_HAS_RANDOM should be defined
   on windows and there is a lib/apr/misc/win32/rand.c which is basically
   a copy of what mod_auth_digest used to use.
 - error handling cleanup
   Since there is not currently a usable ap_strerror it is commented out.
   win32 error handling is virtually non-existant.  I just don't know enough
   about win32 to touch this stuff.

Brian


Submitted by:	Brian Martin
Reviewed by:	Bill Stoddard (very quick review, moving in right direction)


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59866 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -109,6 +109,7 @@ AC_CHECK_LIB(nsl,gethostname)
 AC_CHECK_LIB(socket,socket)
 AC_CHECK_LIB(crypt,crypt)
 AC_CHECK_LIB(ufc,crypt)
+AC_CHECK_LIB(truerand,main)
 
 dnl #----------------------------- Checks for Any required Functions
 dnl Checks for library functions.
@@ -454,7 +455,28 @@ AC_SUBST(sharedmem)
 AC_SUBST(anonymous_shm)
 AC_SUBST(filebased_shm)
 AC_SUBST(keybased_shm)
+ 
+dnl #----------------------------- Checking for /dev/random 
+AC_MSG_CHECKING(for /dev/random)
 
+if test -r "/dev/random"; then
+    AC_DEFINE(DEV_RANDOM, [/dev/random])
+    AC_MSG_RESULT(/dev/random)
+    rand="1"
+elif test -f "/dev/urandom"; then
+    AC_DEFINE(DEV_RANDOM, [/dev/urandom])
+    AC_MSG_RESULT(/dev/urandom)
+    rand="1"
+else
+    AC_MSG_RESULT(not found);
+    if test "$ac_cv_lib_truerand_main" = "yes"; then
+        rand="1"
+    else
+        rand="0"
+    fi
+fi
+
+AC_SUBST(rand)
 dnl #----------------------------- Checking for Time Support 
 echo $ac_n "${nl}Checking for Time Support..."
 AC_CACHE_CHECK([for tm_gmtoff in struct tm], ac_cv_struct_tm_gmtoff,
