Turn os2errno into OS/2 version of ap_canonical_error().
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59886 13f79535-47bb-0310-9956-ffa450edef68

--- a/file_io/os2/Makefile.in
+++ b/file_io/os2/Makefile.in
@@ -21,7 +21,8 @@ OBJS=dir.o \
 	open.o \
 	pipe.o \
 	readwrite.o \
-	seek.o
+	seek.o \
+	maperrorcode.o
 
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
