--- a/misc/unix/Makefile.in
+++ b/misc/unix/Makefile.in
@@ -15,7 +15,7 @@ INCLUDES=-I$(INCDIR1) -I$(INCDIR2) -I.
 
 #LIB=libmisc.a
 
-OBJS=start.o getopt.o otherchild.o error.o rand.o
+OBJS=start.o getopt.o otherchild.o errorcodes.o rand.o
 
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
