Get APR's misc/unix building cleanly on OS/2 using include paths to get the correct version of header files from other APR modules. This removes the need for a string of platform #ifdefs.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59903 13f79535-47bb-0310-9956-ffa450edef68

--- a/misc/unix/Makefile.in
+++ b/misc/unix/Makefile.in
@@ -10,8 +10,10 @@ CFLAGS=@CFLAGS@ @OPTIM@
 LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ $(LIBS)
 INCDIR1=../../include
-INCDIR2=../../file_io/unix
-INCLUDES=-I$(INCDIR1) -I$(INCDIR2) -I.
+INCDIR2=../../file_io/@OSDIR@
+INCDIR3=../../locks/@OSDIR@
+INCDIR4=../../threadproc/@OSDIR@
+INCLUDES=-I$(INCDIR1) -I$(INCDIR2) -I$(INCDIR3) -I$(INCDIR4) -I.
 
 #LIB=libmisc.a
 
