Add ap_canonical error for unix.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59904 13f79535-47bb-0310-9956-ffa450edef68

--- a/misc/unix/Makefile.in
+++ b/misc/unix/Makefile.in
@@ -17,7 +17,7 @@ INCLUDES=-I$(INCDIR1) -I$(INCDIR2) -I$(INCDIR3) -I$(INCDIR4) -I.
 
 #LIB=libmisc.a
 
-OBJS=start.o getopt.o otherchild.o errorcodes.o rand.o
+OBJS=start.o getopt.o otherchild.o errorcodes.o rand.o canonerr.o
 
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
